--- a/wiki/fr/TechDraw_Quadrants.html
+++ b/wiki/fr/TechDraw_Quadrants.html
@@ -60,12 +60,10 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
 <ol><li>S&eacute;lectionnez une ou plusieurs ar&ecirc;tes dans une vue. Toutes les ar&ecirc;tes peuvent &ecirc;tre s&eacute;lectionn&eacute;es, pas seulement les cercles.</li>
 <li>Il y a plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
-<ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_Quadrants.svg&amp;filetimestamp=20240710133049&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Quadrants.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Ajouter des sommets quadrants</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Ajouter des sommets &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_Quadrants.svg&amp;filetimestamp=20240710133049&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Quadrants.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Ajouter des sommets quadrants</b> du menu.</li></ul></li></ol>
-</div>
+<ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_Quadrants.svg&amp;filetimestamp=20240710133049&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Quadrants.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Sommets quadrants</a></span>.</li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Ajouter des sommets &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_Quadrants.svg&amp;filetimestamp=20240710133049&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Quadrants.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Sommets quadrants</b> du menu.</li></ul></li></ol>
 <p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Remarques">Remarques</span></h2>
@@ -135,15 +133,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119184526
+Cached time: 20260119184548
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.089 seconds
-Real time usage: 0.144 seconds
-Preprocessor visited node count: 389/1000000
-Post&#8208;expand include size: 25963/2097152 bytes
-Template argument size: 10066/2097152 bytes
+CPU time usage: 0.079 seconds
+Real time usage: 0.249 seconds
+Preprocessor visited node count: 388/1000000
+Post&#8208;expand include size: 25939/2097152 bytes
+Template argument size: 10042/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -151,19 +149,19 @@ Unstrip post&#8208;expand size: 2238/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   38.964      1 -total
- 31.81%   12.395      1 Template:TechDraw_Tools_navi/fr
- 20.36%    7.932      2 Template:Navigation_menu_2
- 15.02%    5.851      1 Template:Userdocnavi/fr
-  9.21%    3.589      1 Template:GuiCommand/fr
-  8.64%    3.366      1 Template:Button
-  8.60%    3.352      2 Template:Docnav/fr
-  6.34%    2.472      1 Template:Version/fr
-  5.44%    2.118      1 Template:Caption
-  4.79%    1.866      1 Template:Code
+100.00%   73.061      1 -total
+ 19.91%   14.548      1 Template:Version/fr
+ 16.94%   12.376      1 Template:TechDraw_Tools_navi/fr
+ 11.91%    8.702      1 Template:MenuCommand
+ 11.74%    8.577      2 Template:Navigation_menu_2
+ 11.04%    8.066      1 Template:KEY
+  9.62%    7.029      2 Template:Docnav/fr
+  7.81%    5.703      1 Template:Caption
+  7.73%    5.651      1 Template:Code
+  6.08%    4.440      1 Template:Userdocnavi/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156794-0!canonical and timestamp 20260119184526 and revision id 1741078. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156794-0!canonical and timestamp 20260119184547 and revision id 1741080. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
