--- a/wiki/fr/TechDraw_Quadrants.html
+++ b/wiki/fr/TechDraw_Quadrants.html
@@ -72,7 +72,7 @@
 <p><span id="Properties"></span>
 </p>
 <h2><span id="Propri.C3.A9t.C3.A9s"></span><span class="mw-headline" id="Propri&eacute;t&eacute;s">Propri&eacute;t&eacute;s</span></h2>
-<p>Les points cosm&eacute;tiques n'ont pas de propri&eacute;t&eacute;s propres car ils ne sont pas des objets de document. Ils partagent les param&egrave;tres de couleur et de taille avec des points de g&eacute;om&eacute;trie r&eacute;guliers.
+<p>Les sommets cosm&eacute;tiques n'ont pas de propri&eacute;t&eacute;s propres car ils ne sont pas des objets de document. Ils partagent les param&egrave;tres de couleur et de taille avec des points de g&eacute;om&eacute;trie r&eacute;guliers.
 </p><p><span id="Scripting"></span>
 </p>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
@@ -133,12 +133,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119184548
+Cached time: 20260119184612
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.079 seconds
-Real time usage: 0.249 seconds
+CPU time usage: 0.090 seconds
+Real time usage: 0.251 seconds
 Preprocessor visited node count: 388/1000000
 Post&#8208;expand include size: 25939/2097152 bytes
 Template argument size: 10042/2097152 bytes
@@ -149,19 +149,19 @@ Unstrip post&#8208;expand size: 2238/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   73.061      1 -total
- 19.91%   14.548      1 Template:Version/fr
- 16.94%   12.376      1 Template:TechDraw_Tools_navi/fr
- 11.91%    8.702      1 Template:MenuCommand
- 11.74%    8.577      2 Template:Navigation_menu_2
- 11.04%    8.066      1 Template:KEY
-  9.62%    7.029      2 Template:Docnav/fr
-  7.81%    5.703      1 Template:Caption
-  7.73%    5.651      1 Template:Code
-  6.08%    4.440      1 Template:Userdocnavi/fr
+100.00%   76.926      1 -total
+ 18.07%   13.903      1 Template:TechDraw_Tools_navi/fr
+ 13.85%   10.656      2 Template:Navigation_menu_2
+ 13.83%   10.642      2 Template:Docnav/fr
+ 13.27%   10.205      1 Template:MenuCommand
+ 10.86%    8.354      1 Template:KEY
+  8.52%    6.556      1 Template:Userdocnavi/fr
+  7.54%    5.802      1 Template:GuiCommand/fr
+  7.38%    5.676      1 Template:Version/fr
+  7.06%    5.432      1 Template:Code
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156794-0!canonical and timestamp 20260119184547 and revision id 1741080. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156794-0!canonical and timestamp 20260119184612 and revision id 1741082. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
