--- a/wiki/Robust_MCP_Bridge_Workbench.html
+++ b/wiki/Robust_MCP_Bridge_Workbench.html
@@ -2,38 +2,36 @@
 <li><a href="de/Robust_MCP_Bridge_Workbench.html" class="mw-pt-progress mw-pt-progress--complete" title="Arbeitsbereich Robust MCP Bridge (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li>
 <li><a href="fr/Robust_MCP_Bridge_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Atelier Robust MCP Bridge (2% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li></ul></div>
-<figure typeof="mw:File/Thumb"><a href="index.php?title=FreecadRobustMCPBridge.svg&amp;filetimestamp=20260111060448&amp;.html" class="mw-file-description"><img src="File/FreecadRobustMCPBridge.svg" decoding="async" width="128" height="128" class="mw-file-element" data-file-width="64" data-file-height="64"></a><figcaption>Robust MCP Bridge workbench icon</figcaption></figure>
-<p><a href="index.php?title=Template;Workbench&amp;action=edit&amp;redlink=1.html" class="new" title="Template:Workbench (page does not exist)">Template:Workbench</a>
-</p>
-<meta property="mw:PageProp/toc">
+<figure typeof="mw:File/Thumb"><a href="index.php?title=FreecadRobustMCPBridge.svg&amp;filetimestamp=20260111060448&amp;.html" class="mw-file-description"><img src="File/FreecadRobustMCPBridge.svg" decoding="async" width="128" height="128" class="mw-file-element" data-file-width="64" data-file-height="64"></a><figcaption>Robust MCP Bridge Workbench icon</figcaption></figure>
+<div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
 <p>The <b>Robust MCP Bridge Workbench</b> is the server-side connection point that bridges to the <a rel="nofollow" class="external text" href="https://pypi.org/project/freecad-robust-mcp/">Robust MCP Server</a>, which enables external applications to control FreeCAD through the <a rel="nofollow" class="external text" href="https://modelcontextprotocol.io/">Model Context Protocol (MCP)</a>. The workbench runs inside FreeCAD and exposes XML-RPC and JSON-RPC interfaces that external MCP clients can connect to.
 </p><p>This workbench is designed to work with the <a rel="nofollow" class="external text" href="https://pypi.org/project/freecad-robust-mcp/">Robust MCP Server</a> (available on PyPI), which allows AI assistants like <a rel="nofollow" class="external text" href="https://claude.ai">Claude</a> to interact with FreeCAD through natural language. The full documentation and source code can be found at <a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more">github/spkane/freecad-robust-mcp-and-more</a>, where you will find the MCP Server, Bridge and some FreeCAD Macros used for various things, not necessarily related to AI or the MCP work.
 </p><p><b>Key Features:</b>
 </p>
-<ul><li>Toolbar controls for starting/stopping the MCP bridge</li>
-<li>Status indicator showing connection state (green=running, red=stopped)</li>
-<li>XML-RPC server on configurable port (default: 9875)</li>
-<li>JSON-RPC socket server on configurable port (default: 9876)</li>
-<li>Headless mode support for automation and CI/CD pipelines</li>
-<li>Thread-safe queue system ensuring safe FreeCAD operations</li>
-<li>Configurable auto-start on FreeCAD launch</li></ul>
+<ul><li>Toolbar controls for starting/stopping the MCP bridge.</li>
+<li>Status indicator showing connection state (green=running, red=stopped).</li>
+<li>XML-RPC server on configurable port (default: 9875).</li>
+<li>JSON-RPC socket server on configurable port (default: 9876).</li>
+<li>Headless mode support for automation and CI/CD pipelines.</li>
+<li>Thread-safe queue system ensuring safe FreeCAD operations.</li>
+<li>Configurable auto-start on FreeCAD launch.</li></ul>
 <h2><span class="mw-headline" id="Installation">Installation</span></h2>
-<h3><span id="Via_Addon_Manager_.28Recommended.29"></span><span class="mw-headline" id="Via_Addon_Manager_(Recommended)">Via Addon Manager (Recommended)</span></h3>
+<h3><span id="Via_Addon_Manager_.28recommended.29"></span><span class="mw-headline" id="Via_Addon_Manager_(recommended)">Via Addon Manager (recommended)</span></h3>
 <ol><li>Open FreeCAD</li>
 <li>Go to <b>Tools &rarr; Addon Manager</b></li>
 <li>Search for "Robust MCP Bridge"</li>
 <li>Click <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Install</span></li>
 <li>Restart FreeCAD</li></ol>
-<h3><span class="mw-headline" id="Manual_Installation">Manual Installation</span></h3>
+<h3><span class="mw-headline" id="Manual_installation">Manual installation</span></h3>
 <p>Download the latest release from <a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more/releases">GitHub Releases</a> and extract to your FreeCAD Mod directory:
 </p>
 <ul><li><b>Linux</b>: <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">~/.local/share/FreeCAD/Mod/FreecadRobustMCPBridge/</span></li>
 <li><b>macOS</b>: <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">~/Library/Application Support/FreeCAD/Mod/FreecadRobustMCPBridge/</span></li>
 <li><b>Windows</b>: <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">%APPDATA%/FreeCAD/Mod/FreecadRobustMCPBridge/</span></li></ul>
 <h2><span class="mw-headline" id="Usage">Usage</span></h2>
-<h3><span class="mw-headline" id="GUI_Mode">GUI Mode</span></h3>
-<p><span class="mw-default-size" typeof="mw:File"><a href="index.php?title=Addon_RobustMCPBridge_toolbar.png&amp;filetimestamp=20260111060550&amp;.html" class="mw-file-description" title="Robust MCP Bridge workbench toolbar"><img alt="Robust MCP Bridge workbench toolbar" src="File/Addon_RobustMCPBridge_toolbar.png" decoding="async" width="294" height="102" class="mw-file-element" data-file-width="294" data-file-height="102"></a></span>
+<h3><span class="mw-headline" id="GUI_mode">GUI mode</span></h3>
+<p><span class="mw-default-size" typeof="mw:File"><a href="index.php?title=Addon_RobustMCPBridge_toolbar.png&amp;filetimestamp=20260119175551&amp;.html" class="mw-file-description" title="Robust MCP Bridge workbench toolbar"><img alt="Robust MCP Bridge workbench toolbar" src="File/Addon_RobustMCPBridge_toolbar.png" decoding="async" width="302" height="96" class="mw-file-element" data-file-width="302" data-file-height="96"></a></span>
 </p>
 <ol><li>Switch to the <b>Robust MCP Bridge</b> workbench using the workbench selector</li>
 <li>Click <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Start Bridge</span> in the toolbar</li>
@@ -42,7 +40,7 @@
 <p>To stop the bridge, click <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Stop Bridge</span> in the toolbar.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="index.php?title=Addon_RobustMCPBridge_statusbar.png&amp;filetimestamp=20260111011608&amp;.html" class="mw-file-description" title="Robust MCP Bridge workbench statusbar"><img alt="Robust MCP Bridge workbench statusbar" src="File/Addon_RobustMCPBridge_statusbar.png" decoding="async" width="396" height="86" class="mw-file-element" data-file-width="396" data-file-height="86"></a></span>
 </p>
-<h3><span class="mw-headline" id="Headless_Mode">Headless Mode</span></h3>
+<h3><span class="mw-headline" id="Headless_mode">Headless mode</span></h3>
 <p>For automation and CI/CD pipelines, the bridge can run without the GUI:
 </p><p><b>Linux:</b>
 </p>
@@ -84,7 +82,7 @@
 <td>Port for JSON-RPC socket connections</td>
 <td>9876
 </td></tr></tbody></table>
-<p><span typeof="mw:File"><a href="index.php?title=Addon_RobustMCPBridge_preferences.png&amp;filetimestamp=20260111061341&amp;.html" class="mw-file-description" title="Robust MCP Bridge workbench preference pane"><img alt="Robust MCP Bridge workbench preference pane" src="File/Addon_RobustMCPBridge_preferences.png" decoding="async" width="800" height="598" class="mw-file-element" data-file-width="1790" data-file-height="1338"></a></span>
+<p><span typeof="mw:File"><a href="index.php?title=Addon_RobustMCPBridge_preferences.png&amp;filetimestamp=20260119180008&amp;.html" class="mw-file-description" title="Robust MCP Bridge workbench preference pane"><img alt="Robust MCP Bridge workbench preference pane" src="File/Addon_RobustMCPBridge_preferences.png" decoding="async" width="800" height="588" class="mw-file-element" data-file-width="1786" data-file-height="1312"></a></span>
 </p>
 <h2><span class="mw-headline" id="Features_by_Mode">Features by Mode</span></h2>
 <table class="wikitable">
@@ -133,7 +131,7 @@
 <td>Yes</td>
 <td>No
 </td></tr></tbody></table>
-<h2><span class="mw-headline" id="Connecting_MCP_Clients">Connecting MCP Clients</span></h2>
+<h2><span class="mw-headline" id="Connecting_MCP_clients">Connecting MCP clients</span></h2>
 <p>This workbench provides the server that MCP clients connect to. To use with AI assistants like Claude, you need an MCP client such as the <a rel="nofollow" class="external text" href="https://pypi.org/project/freecad-robust-mcp/">Robust MCP Server</a>:
 </p>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">pip</span> <span class="n">install</span> <span class="n">freecad</span><span class="o">-</span><span class="n">robust</span><span class="o">-</span><span class="n">mcp</span>
@@ -145,33 +143,34 @@
 <p>See the <a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more">GitHub repository</a> for full documentation on configuring MCP clients.
 </p>
 <h2><span class="mw-headline" id="Troubleshooting">Troubleshooting</span></h2>
-<h3><span id="Bridge_Won.27t_Start"></span><span class="mw-headline" id="Bridge_Won't_Start">Bridge Won't Start</span></h3>
-<ol><li>Check the FreeCAD Python console (<b>View &rarr; Panels &rarr; Python console</b>) for error messages</li>
-<li>Ensure no other process is using ports 9875/9876</li>
-<li>Try restarting FreeCAD</li></ol>
-<h3><span class="mw-headline" id="Connection_Refused">Connection Refused</span></h3>
-<ol><li>Verify the bridge is running (green status indicator in toolbar)</li>
-<li>Check that ports match between the workbench preferences and your MCP client configuration</li>
-<li>If connecting from Docker, use <code>host.docker.internal</code> instead of <code>localhost</code></li></ol>
-<h3><span id="Headless_Mode_Won.27t_Start"></span><span class="mw-headline" id="Headless_Mode_Won't_Start">Headless Mode Won't Start</span></h3>
-<ol><li>Ensure you're using <code>freecadcmd</code> (not <code>freecad</code>)</li>
-<li>Verify the script path is correct for your installation</li>
-<li>Test FreeCAD first: <code>freecadcmd -c "print('test')"</code></li></ol>
+<h3><span id="Bridge_won.27t_start"></span><span class="mw-headline" id="Bridge_won't_start">Bridge won't start</span></h3>
+<ol><li>Check the FreeCAD Python console (<b>View &rarr; Panels &rarr; Python console</b>) for error messages.</li>
+<li>Ensure no other process is using ports 9875/9876.</li>
+<li>Try restarting FreeCAD.</li></ol>
+<h3><span class="mw-headline" id="Connection_refused">Connection refused</span></h3>
+<ol><li>Verify the bridge is running (green status indicator in toolbar).</li>
+<li>Check that ports match between the workbench preferences and your MCP client configuration.</li>
+<li>If connecting from Docker, use <code>host.docker.internal</code> instead of <code>localhost</code>.</li></ol>
+<h3><span id="Headless_mode_won.27t_start"></span><span class="mw-headline" id="Headless_mode_won't_start">Headless mode won't start</span></h3>
+<ol><li>Ensure you're using <code>freecadcmd</code> (not <code>freecad</code>).</li>
+<li>Verify the script path is correct for your installation.</li>
+<li>Test FreeCAD first: <code>freecadcmd -c "print('test')"</code>.</li></ol>
 <h2><span class="mw-headline" id="Links">Links</span></h2>
-<ul><li><a rel="nofollow" class="external text" href="https://spkane.github.io/freecad-robust-mcp-and-more/">Full Documentation</a> - Complete guides, API reference, and tutorials</li>
-<li><a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more">GitHub Repository</a> - Source code and issue tracker</li>
-<li><a rel="nofollow" class="external text" href="https://pypi.org/project/freecad-robust-mcp/">Robust MCP Server on PyPI</a> - The MCP client that connects to this bridge</li>
-<li><a rel="nofollow" class="external text" href="https://modelcontextprotocol.io/">Model Context Protocol</a> - The protocol specification</li></ul>
+<ul><li><a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more/releases">Latest Release</a></li>
+<li><a rel="nofollow" class="external text" href="https://pypi.org/project/freecad-robust-mcp/">Robust MCP Server on PyPI</a> - The MCP Server that connects to this bridge.</li>
+<li><a rel="nofollow" class="external text" href="https://spkane.github.io/freecad-robust-mcp-and-more/">Full Documentation</a> - Complete guides, API reference, and tutorials.</li>
+<li><a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more">GitHub Repository</a> - Source code and issue tracker.</li>
+<li><a rel="nofollow" class="external text" href="https://modelcontextprotocol.io/">Model Context Protocol</a> - The protocol specification.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260119175502
+Cached time: 20260119185020
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.090 seconds
-Real time usage: 0.456 seconds
-Preprocessor visited node count: 253/1000000
-Post&#8208;expand include size: 2136/2097152 bytes
+CPU time usage: 0.072 seconds
+Real time usage: 0.100 seconds
+Preprocessor visited node count: 251/1000000
+Post&#8208;expand include size: 2233/2097152 bytes
 Template argument size: 742/2097152 bytes
 Highest expansion depth: 4/100
 Expensive parser function count: 4/100
@@ -180,16 +179,16 @@ Unstrip post&#8208;expand size: 3298/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   84.319      1 -total
- 31.08%   26.204      4 Template:Code
- 13.85%   11.678      3 Template:FileName
- 13.01%   10.969      1 Template:Workbench
- 10.28%    8.667      4 Template:MenuCommand
-  9.92%    8.365      5 Template:Incode
-  7.84%    6.609      3 Template:Button
+100.00%   13.878      1 -total
+ 27.26%    3.783      4 Template:Code
+ 19.10%    2.650      3 Template:FileName
+ 16.38%    2.274      4 Template:MenuCommand
+ 12.27%    1.703      5 Template:Incode
+  9.90%    1.374      1 Template:TOCright
+  5.95%    0.826      3 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410040-0!canonical and timestamp 20260119175507 and revision id 1741030. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410040-0!canonical and timestamp 20260119185028 and revision id 1741094. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
